--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ nav_sort: case_insensitive # default, equivalent to nil
 back_to_top: true
 back_to_top_text: "Back to top"
 
-footer_content: "2020 - <a href=\"https://github.com/hslu-ige-laes">hslu-ige-laes</a>"
+footer_content: "2020 - <a href=\"https://github.com/hslu-ige-laes\">hslu-ige-laes</a>"
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
