--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ aux_links:
     - "//github.com/hslu-ige-laes/lora-devices-ttn"
 
 # Makes Aux links open in a new tab. Default is false
-aux_links_new_tab: false
+aux_links_new_tab: true
 
 # Sort order for navigation links
 nav_sort: case_insensitive # default, equivalent to nil
